--- a/product-details.html
+++ b/product-details.html
@@ -19,17 +19,17 @@ highlight_nav: electronics
 </div>
 
 
-<div class="grid push-2">
-  <div class="unit xs-1-2">
-    {% pattern cards/similar-product %}
+<div class="grid push-2 gutter-2">
+  <div class="unit xs-1-2 m-1-3 l-1-4 xl-1-4">
+    {% pattern cards/similar-product button_text="Shop" button_url="/products/" %}
   </div>
-  <div class="unit unit-xs-hidden unit-s-hidden">
-    {% pattern cards/similar-product %}
+  <div class="unit unit-xs-hidden unit-s-hidden m-1-3 l-1-4 xl-1-4">
+    {% pattern cards/similar-product button_text="Shop" button_url="/products/" %} image="product-type-writer.jpg"
   </div>
-  <div class="unit unit-xs-hidden unit-s-hidden unit-m-hidden">
-    {% pattern cards/similar-product %}
+  <div class="unit unit-xs-hidden unit-s-hidden unit-m-hidden l-1-4 xl-1-4">
+    {% pattern cards/similar-product button_text="Shop" button_url="/products/" %} image="product-radio.jpg"
   </div>
-  <div class="unit xs-1-2">
-    {% pattern cards/similar-product %}
+  <div class="unit xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4">
+    {% pattern cards/similar-product button_text="Shop" button_url="/products/" %} image="product-canon.jpg"
   </div>
 </div>
