--- a/_patterns/cards/similar-product.html
+++ b/_patterns/cards/similar-product.html
@@ -1,7 +1,7 @@
 <div>
   <a class="crop hover-box icon-link" href="#" aria-label="Navigate to product details page">
     <div class="embed embed-2by3 relative">
-      <img class="hover-img embed-item img-flex similar-card-img" src="/images/camera.jpg" alt="Image of advertised item">
+      <img class="hover-img embed-item img-flex similar-card-img" src="/images/{{include.image}}" alt="Image of advertised item">
       <div class="pin-cb similar-card-content">
         {% pattern buttons/ghost text=include.button_text url=include.button_url %}
       </div>
