Add more sections and styling

--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -5,7 +5,7 @@
         <img class="img-flex push-1-2 product-card-img" src="{{include.data.image}}" alt="Image of advertised electronic">
       </a>
       <div class="product-card-content">
-        <a class="icon-link" href="" aria-label="Navigate to product details page">
+        <a class="icon-link" href="#" aria-label="Navigate to product details page">
           <dl>
             <dt>{{include.data.name}}</dt>
             <dd class="bold">${{include.data.price}}</dd>
