--- a/_patterns/forms/area-input.html
+++ b/_patterns/forms/area-input.html
@@ -1,6 +1,6 @@
 <div class="">
   <h6 class="push-1-2">
-    <label for="message">Comments or Questions</label>
+    <label for="message">{{include.text}}</label>
   </h6>
   <textarea class="area-item push-1-4" id="message"></textarea>
 </div>
