--- a/_patterns/forms/checkbox-input.html
+++ b/_patterns/forms/checkbox-input.html
@@ -1,4 +1,4 @@
 <div class="">
   <input class="checkbox" type="checkbox" id="promo-sign-up">
-  <label for="promo-sign-up" class="promo">I want to receive emails about new promotions and deals!</label>
+  <label for="promo-sign-up" class="promo">{{include.text}}</label>
 </div>
