--- a/_patterns/forms/number-input.html
+++ b/_patterns/forms/number-input.html
@@ -1,6 +1,6 @@
 <div class="">
   <h6 class="push-1-2">
-    <label for="phone">Phone Number</label>
+    <label for="phone">{{include.text}}</label>
   </h6>
   <input class="form-item push-1-4" type="tel" id="phone" required aria-describedby="phone-error">
   <p class="error-message milli island-1-4 push-0" id="phone-error">
