--- a/_patterns/forms/select-input.html
+++ b/_patterns/forms/select-input.html
@@ -1,6 +1,6 @@
 <div class="">
   <h6 class="push-1-2">
-    <label for="country">Country</label>
+    <label for="country">{{include.text}}</label>
   </h6>
   <select id="country" name="country" class="form-item form-field push-1-4">
     <option label="country"></option>
