--- a/_patterns/forms/sign-up-input.html
+++ b/_patterns/forms/sign-up-input.html
@@ -1,6 +1,6 @@
 <div class="grid grid-stretch">
   <h6 class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
-    <label for="email-promo">Sign up for emails</label>
+    <label for="email-promo">{{include.text}}</label>
   </h6>
   <input class="push-1-4 unit xs-1 s-1 m-1 l-1 xl-1 sign-up" type="email" id="email-promo" placeholder="bruce.wayne@batman.com" required aria-describedby="email-error">
   <p class="error-message milli island-1-4 push-0 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2" id="email-error">
