--- a/_patterns/forms/text-input.html
+++ b/_patterns/forms/text-input.html
@@ -1,6 +1,6 @@
 <div class="">
   <h6 class="push-1-2">
-    <label for="email">E-mail address</label>
+    <label for="email">{{include.text}}</label>
   </h6>
   <input class="form-item push-1-4" type="email" id="email" placeholder="bruce.wayne@batman.com" required aria-describedby="text-error">
   <p class="error-message milli island-1-4 push-0 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2" id="text-error">
