--- a/_patterns/navigation/section-nav.html
+++ b/_patterns/navigation/section-nav.html
@@ -1,25 +1,25 @@
 <nav class="grid category-nav" role="navigation">
   <ol class="unit list-group">
     <li class="push-1-2">
-      <a class="icon-link text-upper" href="#" aria-label="Navigate to the electronics page"><h6 class="push-0">Electronics</h6></a>
+      <a class="icon-link text-upper" href="#" aria-label="Navigate to the electronics page"><h6 class="push-0">{{include.text}}</h6></a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the CD Players page">CD Players</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the CD Players page">{{include.text-2}}</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Record Players page">Record Players</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Record Players page">{{include.text-3}}</a>
     </li>
     <li class="push-1-4">
-      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Cassette Players page">Cassette Players</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Cassette Players page">{{include.text-4}}</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Stereos page">Stereos</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Stereos page">{{include.text-5}}</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Polaroid Cameras page">Polaroid Cameras</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Polaroid Cameras page">{{include.text-6}}</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Film Cameras page">Film Cameras</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Film Cameras page">{{include.text-7}}</a>
     </li>
   </ol>
 </nav>
