--- a/_patterns/banners/home-banner.html
+++ b/_patterns/banners/home-banner.html
@@ -1,6 +1,6 @@
 <div class="home-banner relative">
   <div class="home-banner-content pin-lc text-center">
-    <h1 class="home-banner-type tenamega">Extra 20% off sale items</h1>
+    <h1 class="home-banner-type tenamega">{{include.text}}</h1>
     {% if include.button_url %}
       {% pattern buttons/basic url=include.button_url text=include.button_text %}
     {% endif %}
