--- a/_patterns/forms/multiple-field-input.html
+++ b/_patterns/forms/multiple-field-input.html
@@ -1,6 +1,6 @@
 <div class="">
   <h6 class="push-1-2">
-    <label for="date">Expiry Date</label>
+    <label for="date">{{include.text}}</label>
   </h6>
   <div class="grid push-1-4">
     <input class="xs-1-2 s-1-2 m-1-2 l-1-2 xl-1-2 form-item exp-date push-r" type="number" id="month" placeholder="mm" required aria-describedby="month-error">
