--- a/_patterns/forms/quantity-select-input.html
+++ b/_patterns/forms/quantity-select-input.html
@@ -1,5 +1,5 @@
 <div class="">
-  <label for="quantity" class="bold push-1-2">QUANTITY</label>
+  <label for="quantity" class="bold push-1-2">{{include.text}}</label>
   <select id="quantity" name="quantity" class="form-field quantity">
     <option>1</option>
     <option>2</option>
