--- a/_patterns/forms/search-input.html
+++ b/_patterns/forms/search-input.html
@@ -1,6 +1,6 @@
 <div class="grid grid-stretch grid-middle">
   <h6 class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-2 search-label">
-    <label for="search">Search</label>
+    <label for="search">{{include.text}}</label>
   </h6>
   <div class="unit xs-1 s-2-3 m-2-3 l-2-3 xl-2-3 push-1-4 gutter-1-4">
     <input class="" type="search" id="search">
