--- a/product-details.html
+++ b/product-details.html
@@ -10,7 +10,7 @@ highlight_nav: electronics
     {% pattern buttons/cart %}
   </div>
   <div class="push-2 unit xs-1 s-1 m-1 l-1 xl-1 ">
-    {% pattern sections/details %}
+    {% pattern sections/details header="Crosley Record Player" image="record-close-up-1.jpg" image-2="record-close-up-2.jpg" image-3="record-close-up-3.jpg" image-4="record-close-up-4.jpg" product-image="product-record-player.jpg" title="Record Player" text="$99.99" title-2="Colour" text-2="WHITE" title-3="Quantity" title-4="Product Description" text-4="Listen to all of your favourite records on this Crosley Record Player." %}
   </div>
 </div>
 
