--- a/_patterns/sections/details.html
+++ b/_patterns/sections/details.html
@@ -8,22 +8,22 @@
       <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
         <div class="grid">
           <div class="island-1-4 unit xs-1-4 s-1-4 m-1 l-1 xl-1">
-            <img class="img-flex" src="/images/{{include.image}}" alt="">
+            <img class="img-flex" src="{{include.image}}" alt="">
           </div>
           <div class="island-1-4 unit xs-1-4 s-1-4 m-1 l-1 xl-1">
-            <img class="img-flex" src="/images/{{include.image-2}}" alt="">
+            <img class="img-flex" src="{{include.image-2}}" alt="">
           </div>
           <div class="island-1-4 unit xs-1-4 s-1-4 m-1 l-1 xl-1">
-            <img class="img-flex" src="/images/{{include.image-3}}" alt="">
+            <img class="img-flex" src="{{include.image-3}}" alt="">
           </div>
           <div class="island-1-4 unit xs-1-4 s-1-4 m-1 l-1 xl-1">
-            <img class="img-flex" src="/images/{{include.image-4}}" alt="">
+            <img class="img-flex" src="{{include.image-4}}" alt="">
           </div>
         </div>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4 xl-3-4">
         <div class="island-1-4">
-          <img class="img-flex" src="/images/{{include.product-image}}" alt="">
+          <img class="img-flex" src="{{include.product-image}}" alt="">
         </div>
       </div>
     </div>
