--- a/products.html
+++ b/products.html
@@ -12,10 +12,10 @@ highlight_nav: electronics
 </div>
 <div class="grid wrapper">
   <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push">
-    {% pattern banners/product-page-banner %}
+    {% pattern banners/product-page-banner text="Extra 20% off sale items" text-2="Cassettes" image="product-page-banner.jpg" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4">
-    {% pattern navigation/page-nav %}
+    {% pattern navigation/section-nav text="Electronics" text-2="CD Players" text-3="Record Players" text-4="Cassette Players" text-5="Stereos" text-6="Polaroid Cameras" text-7="Film Cameras" %}
   </div>
   <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4">
     <div class="grid">
