--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 <div class="grid wrapper">
   <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
-    {% pattern banners/home-banner text="Extra 20% off sale items" button_text="Check it Out" button_url="/electronics/" %}
+    {% pattern banners/home-banner text="Extra 20% off sale items" button_text="Check it Out" button_url="/products/" %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
     {% pattern cards/product-category heading="Retro Electronics" image="retro-radio.jpg" %}
