--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ layout: default
     {% pattern banners/home-banner text="Extra 20% off sale items" button_text="Check it Out" button_url="/products/" %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-    {% pattern cards/product-category heading="Retro Electronics" image="retro-radio.jpg" %}
+    {% pattern cards/product-category heading="Retro Electronics" image="retro-radio.jpg" url="/products/" %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-    {% pattern cards/product-category heading="Retro Accessories" image="type-writer.jpg" %}
+    {% pattern cards/product-category heading="Retro Accessories" image="type-writer.jpg" url="/products/" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push-1-2">
     {% pattern cards/shop image="polaroid.jpg" button_text="Shop Cameras" button_url="/products/" %}
