--- a/cart.html
+++ b/cart.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<div>
+  {% pattern sections/headings text="Checkout" %}
+</div>
+<div>
+  {% pattern sections/subheadings text="Cart Summary" %}
+</div>
+
 <div class="island">
   {% pattern sections/cart-items title="Description" text="Listen to all of your favourite records on this Crosley Record Player." title-2="Colour" text-2="White" title-3="Item Price" text-3="$99.99" title-4="Price" text-4="$99.99" text-5="$99.99" image="product-record-player.jpg" %}
 </div>
@@ -10,23 +17,23 @@ layout: default
   {% pattern sections/subheadings text="Shipping Information" %}
 </div>
 
-<div class="grid island">
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+<div class="grid island wrapper">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="First Name" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="Last Name" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="Home Address" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="Postal Code" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="Country" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="City" %}
   </div>
 </div>
@@ -35,21 +42,21 @@ layout: default
   {% pattern sections/subheadings text="Payment Information" %}
 </div>
 
-<div class="grid island">
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+<div class="grid island wrapper">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="Name On Credit Card" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
-    {% pattern forms/text-input text="Credit Card Number" %}
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2 push">
+    {% pattern forms/number-input text="Credit Card Number" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="Expiration Date" %}
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2">
-    {% pattern forms/text-input text="CVC" %}
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2 push">
+    {% pattern forms/multiple-field-input text="Expiry Date" %}
   </div>
 </div>
 
 <div class="text-center pad-b-2">
-{% pattern buttons/ghost text="CONFIE ORDER" url="/electronics/" %}
+{% pattern buttons/ghost text="Confirm Order" url="/electronics/" %}
 </div>
