Style the pages

--- a/_patterns/navigation/section-nav.html
+++ b/_patterns/navigation/section-nav.html
@@ -1,5 +1,5 @@
 <nav class="grid category-nav" role="navigation">
-  <ol class="unit list-group">
+  <ol class="unit xs-1 s-1 m-1 l-1 xl-1 list-group">
     <li class="push-1-2">
       <a class="icon-link text-upper" href="#" aria-label="Navigate to the electronics page"><h6 class="push-0">{{include.text}}</h6></a>
     </li>
