--- a/products.html
+++ b/products.html
@@ -14,26 +14,27 @@ highlight_nav: electronics
   <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push">
     {% pattern banners/product-page-banner text="Extra 20% off sale items" text-2="Cassettes" image="product-page-banner.jpg" %}
   </div>
-  <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4">
-    {% pattern navigation/section-nav text="Electronics" text-2="CD Players" text-3="Record Players" text-4="Cassette Players" text-5="Stereos" text-6="Polaroid Cameras" text-7="Film Cameras" %}
-  </div>
-  <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4">
+  <div class="unit">
     <div class="grid">
-      <div class="unit gutter-1-4">
-        {% pattern navigation/section-nav %}
+      <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4 push-1-2">
+        {% pattern navigation/page-nav %}
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 text-right gutter-1-4">
+        {% pattern navigation/section-nav text="Electronics" text-2="CD Players" text-3="Record Players" text-4="Cassette Players" text-5="Stereos" text-6="Polaroid Cameras" text-7="Film Cameras" %}
+      </div>
+
+      <div class="unit xs-1 s-1 m-2-3 l-3-4 xl-3-4 gutter-1-4">
+        <div class="grid">
+          {% for product in site.products %}
+            <div class="unit [ xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4] island-1-4">
+              {% pattern cards/product data=product %}
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4">
+        {% pattern navigation/page-nav %}
       </div>
     </div>
-  </div>
-  <div class="unit xs-1 s-1 m-2-3 l-3-4 xl-3-4 gutter-1-4">
-    <div class="grid">
-      {% for product in site.products %}
-        <div class="unit [ xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4] island-1-4">
-          {% pattern cards/product data=product %}
-        </div>
-      {% endfor %}
-    </div>
-  </div>
-  <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4">
-    {% pattern navigation/page-nav %}
   </div>
 </div>
