Add more styling to the page

--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -41,7 +41,7 @@
           </a>
         </li>
       </ul>
-      <a class="logo-link icon-link pin-ct" href="#" aria-label="Navigate to the home page">
+      <a class="logo-link icon-link pin-ct" href="{{include.url}}" aria-label="Navigate to the home page">
         <i class="icon i-256 logo">
           <img src="/images/logo-256.svg" alt="Logo of The Retro brand">
         </i>
