--- a/_patterns/sections/details.html
+++ b/_patterns/sections/details.html
@@ -1,6 +1,6 @@
 <div class="grid wrapper">
   <div class="unit xs-1 s-1 m-1 l-1 xl-1">
-    {% pattern navigation/back %}
+    {% pattern navigation/back url="/products/" %}
   </div>
   <h1 class="text-center unit xs-1 s-1 m-1 l-1 xl-1 tena">{{include.header}}</h1>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
