Update pattern library sections

--- a/_patterns/sections/faq.html
+++ b/_patterns/sections/faq.html
@@ -1,16 +1,16 @@
 <section>
   <dl class="max-length">
-    <h5 class="nina">Frequently Asked Questions</h5>
-    <dt>How long will it take for my order to ship?</dt>
-    <dd>Normally, it takes about 1 business day to process your order. After that, it will be shipped and on its way to you!</dd>
+    <h5 class="nina">{{include.heading}}</h5>
+    <dt class="bold">{{include.title}}</dt>
+    <dd>{{include.text}}</dd>
 
-    <dt>How much does shipping usually cost?</dt>
-    <dd>Shipping domestically (Canada) will cost a flat rate of $5.00.</dd>
+    <dt class="bold">{{include.title-2}}</dt>
+    <dd>{{include.text-2}}</dd>
 
-    <dt>Am I able to return items?</dt>
-    <dd>We offer refunds and exchanges upon the request of customers with reasonable justifications.</dd>
+    <dt class="bold">{{include.title-3}}</dt>
+    <dd>{{include.text-3}}</dd>
 
-    <dt>What's the best way to reach a customer service representative?</dt>
-    <dd>We encourage you to email us, or call us. We don't particularily have a preference!</dd>
+    <dt class="bold">{{include.title-4}}</dt>
+    <dd>{{include.text-4}}</dd>
   </dl>
 </section>
