Update the checkout form

--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@ layout: default
     {% pattern forms/text-input text="Postal Code" %}
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
-    {% pattern forms/text-input text="Country" %}
+    {% pattern forms/select-input text="Country" %}
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-2 xl-1-2 ] gutter-1-2 push">
     {% pattern forms/text-input text="City" %}
@@ -50,7 +50,7 @@ layout: default
     {% pattern forms/number-input text="Credit Card Number" %}
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2 push">
-    {% pattern forms/text-input text="Expiration Date" %}
+    {% pattern forms/text-input text="CVC" %}
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] gutter-1-2 push">
     {% pattern forms/multiple-field-input text="Expiry Date" %}
