--- a/_patterns/sections/content-paragraph.html
+++ b/_patterns/sections/content-paragraph.html
@@ -1,8 +1,8 @@
 <section>
-  <div class="grid max-length island">
+  <div class="grid island">
     <div class="unit xs-1 s-1 m-1 l-1 xl-1">
       <h5 class="island-1-2 push-0 text-center">{{include.title}}</h5>
-      <p class="island-1-2 push-0 giga">{{include.text}}</p>
+      <p class="island-1-2 push-0">{{include.text}}</p>
     </div>
   </div>
 </section>
