Update the privacy page

--- a/_patterns/sections/faq.html
+++ b/_patterns/sections/faq.html
@@ -12,5 +12,14 @@
 
     <dt class="bold">{{include.title-4}}</dt>
     <dd>{{include.text-4}}</dd>
+
+    <dt class="bold">{{include.title-5}}</dt>
+    <dd>{{include.text-5}}</dd>
+
+    <dt class="bold">{{include.title-6}}</dt>
+    <dd>{{include.text-6}}</dd>
+
+    <dt class="bold">{{include.title-7}}</dt>
+    <dd>{{include.text-7}}</dd>
   </dl>
 </section>
