Add styling to the table

--- a/landing.html
+++ b/landing.html
@@ -14,6 +14,9 @@ layout: default
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
     {% pattern cards/shop image="antique-camera-square.jpg" button_text="Take me there" button_url="/products/" %}
   </div>
+  <div class="unit xs-1 s-1 m-1 l-1 xl-1">
+    {% pattern sections/table-section title="Quantity" title-2="Price/Each" title-3="Discount" cell-1="1 - 10" cell-2="$5.99" cell-3="5%" cell-1-2="11 - 49" cell-2-2="$5.49" cell-3-2="10%" cell-1-3="50 - 100" cell-2-3="$4.99" cell-3-3="15%" cell-1-4="100 - 500" cell-2-4="$4.25" cell-3-4="20%" cell-1-5="500 +" cell-2-5="$3.99" cell-3-5="25%" %}
+  </div>
   <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com" class="unit xs-1 s-1 m-1 l-1 xl-1 gutter-1-4">
     <fieldset>
       <div class="push-1-2">
