Style the table elements

--- a/_patterns/sections/table-section.html
+++ b/_patterns/sections/table-section.html
@@ -1,4 +1,4 @@
-<table class="max-length island">
+<table class="">
   <thead>
     <tr class="title-row">
       <th scope="col" class="table-title text-upper giga">{{include.title}}</th>
