Resize images to be smaller

--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,5 +1,5 @@
 <div class="btn-border-light">
-  <a class="btn btn-light mega" href="{{include.url}}" aria-label="Navigate to the Electronics page">
+  <a class="btn btn-light milli" href="{{include.url}}" aria-label="Navigate to the Electronics page">
     <span class="milli push-r-1-4">{{include.text}}</span>
     <i class="icon i-16 arrow-icon">
       <svg><use xlink:href="/images/icons.svg#right-arrow" /></svg>
