--- a/_patterns/buttons/ghost.html
+++ b/_patterns/buttons/ghost.html
@@ -1,3 +1,3 @@
 <div class="btn-border-ghost">
-  <a class="mega btn btn-ghost" href="{{include.url}}" aria-label="Navigate to the Electronics page">{{include.text}}</a>
+  <a class="milli btn btn-ghost" href="{{include.url}}" aria-label="Navigate to the Electronics page">{{include.text}}</a>
 </div>
