--- a/_patterns/buttons/submit.html
+++ b/_patterns/buttons/submit.html
@@ -1,3 +1,3 @@
 <div class="btn-border-ghost">
-  <button type="submit" class="mega btn btn-ghost" aria-label="submit form">{{include.text}}</button>
+  <button type="submit" class="milli btn btn-ghost" aria-label="submit form">{{include.text}}</button>
 </div>
