--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -17,7 +17,7 @@
           <a class="footer-link icon-link" href="#" aria-label="Navigate to the Careers page">Careers</a>
         </li>
         <li class="">
-          <a class="footer-link icon-link" href="#" aria-label="Navigate to the Privacy page">Privacy</a>
+          <a class="footer-link icon-link" href="{{include.url}}" aria-label="Navigate to the Privacy page">Privacy</a>
         </li>
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
