--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     {% pattern forms/search-input %}
   </div>
   <div class="unit xs-1 s-1 m-1-6 l-1-6 xl-1-6">
-    {% pattern buttons/cart %}
+    {% pattern buttons/cart url="/checkout/" %}
   </div>
 </div>
 <div class="grid wrapper">
