Edit elemtns of the page

--- a/_patterns/cards/shop.html
+++ b/_patterns/cards/shop.html
@@ -1,7 +1,7 @@
 <div class="grid gutter-1-4">
   <div class="unit xs-1 s-1 m-1 l-1 xl-1">
     <div class="square-card relative">
-      <a class="crop icon-link hover-box" href="#" aria-label="Navigate to product details page">
+      <a class="crop icon-link hover-box" href="{{include.image-url}}" aria-label="Navigate to product details page">
         <div class="embed embed-1by1">
           <img class="hover-img embed-item img-flex square-card-img" src="/images/{{include.image}}" alt="Image of advertised item">
         </div>
