--- a/_patterns/cards/similar-product.html
+++ b/_patterns/cards/similar-product.html
@@ -1,5 +1,5 @@
 <div>
-  <a class="crop hover-box icon-link" href="#" aria-label="Navigate to product details page">
+  <a class="crop hover-box icon-link" href="{{include.image-url}}" aria-label="Navigate to product details page">
     <div class="embed embed-2by3 relative">
       <img class="hover-img embed-item img-flex similar-card-img" src="/images/{{include.image}}" alt="Image of advertised item">
       <div class="pin-cb similar-card-content">
