--- a/_patterns/sections/details.html
+++ b/_patterns/sections/details.html
@@ -52,7 +52,7 @@
       <p>{{include.text-4}}</p>
     </div>
     <div class="">
-      {% pattern buttons/ghost text="Add to Cart" url="/electronics/" %}
+      {% pattern buttons/ghost text="Add to Cart" url="/checkout/" %}
     </div>
   </div>
 </div>
